5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4003/executions/1573_996.log
== TEST (2019-03-11 14:56:10) 
-- CODE:
print("*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:56:12) 
-- CODE:
print("*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- OUTPUT:
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:56:13) 
-- CODE:
print("*****")
print(" ")
print(" ")
print(" ")
print(" ")
-- EXECUTION TIME:
0.168459
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:57:07) 
-- CODE:
print(" ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print(" ***** ")
-- OUTPUT:
***** 
 * o o * 
 *  ^  * 
 * --- * 
 *****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:57:08) 
-- CODE:
print(" ***** ")
print(" * o o * ")
print(" *  ^  * ")
print(" * --- * ")
print(" ***** ")
-- EXECUTION TIME:
0.165318
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
 * o o * 
 *  ^  * 
 * --- * 
 *****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:57:43) 
-- CODE:
print("") ***** 
print(" * o o * ")
print("") *  ^  *
print("") * --- *
print("") *****
-- ERROR:
File "XXXX", line 1
    print("") ***** 
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:57:45) 
-- CODE:
print("") ***** 
print(" * o o * ")
print("") *  ^  *
print("") * --- *
print("") *****
-- EXECUTION TIME:
0.119652
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print("") ***** 
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:58:12) 
-- CODE:
print("")***** 
print("* o o *")
print("")*  ^  *
print("")* --- *
print("")*****
-- ERROR:
File "XXXX", line 1
    print("")***** 
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:58:12) 
-- CODE:
print("")***** 
print("* o o *")
print("")*  ^  *
print("")* --- *
print("")*****
-- EXECUTION TIME:
0.140847
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print("")***** 
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:58:13) 
-- CODE:
print("")***** 
print("* o o *")
print("")*  ^  *
print("")* --- *
print("")*****
-- EXECUTION TIME:
0.126313
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 1
    print("")***** 
                ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:58:47) 
-- CODE:
print("***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")*****
-- ERROR:
File "XXXX", line 5
    print("*****")*****
                     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:58:49) 
-- CODE:
print("***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")*****
-- EXECUTION TIME:
0.190255
-- ERROR:
  File "/home/codebench/codes/1573/996/main.py", line 5
    print("*****")*****
                     ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:58:51) 
-- CODE:
print("***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
***** 
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:58:52) 
-- CODE:
print("***** ")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.114562
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
***** 
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:59:02) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
* o o *
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:59:03) 
-- CODE:
print("*****")
print("* o o *")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.13278
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
* o o *
*  ^  *
* --- *
*****
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-11 14:59:20) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- OUTPUT:
*****
(* o o *)
*  ^  *
* --- *
*****
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-11 14:59:22) 
-- CODE:
print("*****")
print("(* o o *)")
print("*  ^  *")
print("* --- *")
print("*****")
-- EXECUTION TIME:
0.188915
-- TEST CASE 1:
---- input:
xx
---- correct output:
*****
(* o o *)
*  ^  *
* --- *
*****
---- user output:
*****
(* o o *)
*  ^  *
* --- *
*****
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
